# SYCL-AccessorsNote

./: CMakeLists.txt  CMakeSettings.json  Minimal.cpp  MinimalFix.cpp  Normalize.cpp  Reduce.hpp  Transform.hpp  TransformPlaceholder.hpp
